# Folding

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  README2.md  conanfile.py  folding copy.hpp  folding.hpp
cmake/: FoldingConfig.cmake.in
config/: CMakeLists.txt  config.h.in
tests/: CMakeLists.txt  TestFolding.cc  TestUtils.cc  TestUtils.h
tests/csv/: kfold_diabetes_0.csv  kfold_diabetes_1.csv  kfold_diabetes_10_0.csv  kfold_diabetes_10_1.csv  kfold_diabetes_10_2.csv  kfold_diabetes_10_3.csv  kfold_diabetes_10_4.csv  kfold_diabetes_10_5.csv  kfold_diabetes_10_6.csv  kfold_diabetes_10_7.csv  kfold_diabetes_10_8.csv  kfold_diabetes_10_9.csv  kfold_diabetes_2.csv  kfold_diabetes_3.csv  kfold_diabetes_3_0.csv  kfold_diabetes_3_1.csv  kfold_diabetes_3_2.csv  kfold_diabetes_4.csv  kfold_diabetes_5_0.csv  kfold_diabetes_5_2.csv  kfold_diabetes_7_0.csv  kfold_diabetes_7_1.csv  kfold_diabetes_7_2.csv  kfold_diabetes_7_3.csv  kfold_diabetes_7_4.csv  kfold_diabetes_7_5.csv  kfold_diabetes_7_6.csv  kfold_glass_0.csv  kfold_glass_1.csv  kfold_glass_10_0.csv  kfold_glass_10_1.csv  kfold_glass_10_2.csv  kfold_glass_10_3.csv  kfold_glass_10_4.csv  kfold_glass_10_5.csv  kfold_glass_10_6.csv  kfold_glass_10_7.csv  kfold_glass_10_8.csv  kfold_glass_10_9.csv  kfold_glass_2.csv  (+163 more)
tests/lib/Files/: ArffFiles.cc  ArffFiles.h
